// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components ContactListItem should renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[MockFunction]}
>
  <ForwardRef(View)
    style={
      Array [
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingVertical": 3,
        },
        undefined,
      ]
    }
  >
    <ContactAvatar
      contact={Object {}}
      size={50}
    />
    <ForwardRef(View)
      style={
        Object {
          "justifyContent": "center",
          "paddingHorizontal": 10,
        }
      }
    >
      <ForwardRef(Text)>
         
      </ForwardRef(Text)>
      <ForwardRef(Text)
        style={
          Object {
            "color": "#676767",
          }
        }
      >
        Last updated on testDate
      </ForwardRef(Text)>
    </ForwardRef(View)>
  </ForwardRef(View)>
</TouchableOpacity>
`;

exports[`Components ContactListItem should renders correctly 2`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[MockFunction]}
>
  <ForwardRef(View)
    style={
      Array [
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingVertical": 3,
        },
        Object {
          "backgroundColor": "#FBFBFB",
        },
      ]
    }
  >
    <ContactAvatar
      contact={Object {}}
      size={50}
    />
    <ForwardRef(View)
      style={
        Object {
          "justifyContent": "center",
          "paddingHorizontal": 10,
        }
      }
    >
      <ForwardRef(Text)>
         
      </ForwardRef(Text)>
      <ForwardRef(Text)
        style={
          Object {
            "color": "#676767",
          }
        }
      >
        Last updated on testDate
      </ForwardRef(Text)>
    </ForwardRef(View)>
  </ForwardRef(View)>
</TouchableOpacity>
`;
